--- a/axit/scss/page/_contact.scss
+++ b/axit/scss/page/_contact.scss
@@ -1,15 +1,28 @@
 .contact {
     padding-top: 100px;
     padding-bottom: 80px;
-    @include  bp-ip6-plus {
-        padding-bottom: 50px;
-        padding-top: 50px;
-    }
+    //@include  bp-ip6-plus {
+    //    padding-bottom: 50px;
+    //    padding-top: 50px;
+    //}
     .container {
         text-align: center;
         .contact-title {
             h2 {
-                margin-top: 0;
+                margin: 0;
+            }
+            .border {
+                margin: 25px 0;
+                border-bottom: solid 2px #ff8b38;
+                width: 65px;
+                position: absolute;
+                right: 50%;
+                @include css3-prefix('transform', 'translateX(50%)');
+            }
+            p {
+                color: #97979b;
+                margin-top: 50px;
+                margin-bottom: 0;
             }
         }
         .clearfix {
@@ -39,6 +52,7 @@
                     border: transparent;
                     outline: none;
                     border-bottom: 1px solid #f5f5f5;
+                    resize: none;
                 }
             }
         }
@@ -46,6 +60,11 @@
             background: #ff8b38;
             color: #ffffff;
             padding: 10px 30px;
+            @include css3-prefix('transition',0.5s);
+            &:hover {
+                color: #000000;
+                //background-color: #ffffff;
+            }
         }
     }
 }
