--- a/axit/scss/page/_tab.scss
+++ b/axit/scss/page/_tab.scss
@@ -2,33 +2,31 @@
     background-color: #f5f5f5;
     padding-bottom: 110px;
     padding-top: 150px;
-    @include bp-ip6-plus {
-        padding: 70px 0;
-    }
-    @include bp-ip6 {
-        padding: 70px 0;
-    }
+    //@include bp-ip6-plus {
+    //    padding: 70px 0;
+    //}
+    //@include bp-ip6 {
+    //    padding: 70px 0;
+    //}
     .container {
         .number-tab {
-            flex-direction: column;
-            .sub-number-tab {
-                width: 110px;
-                height: 110px;
+            li {
+                border-bottom: solid 1px #ffffff;
                 background-color: #333333;
                 color: #ffffff;
-                &:hover {
-                    background-color: #ff8b38;
+                margin: 0;
+                a {
+                    padding: 50px 30px;
+                    color: #ffffff;
+                    border-radius: inherit;
+                    @include css3-prefix('transition',0.5s);
+                    &:hover {
+                        background-color: #ff8b38;
+                    }
+                     &:focus {
+                         background-color: #ff8b38;
+                     }
                 }
-                position: relative;
-                .tab-number {
-                    position: absolute;
-                    top: 50%;
-                    right: 50%;
-                    @include css3-prefix('transform', 'translate(50%, -50%)');
-                }
-            }
-            .sub1, .sub2 {
-                border-bottom: solid 1px #ffffff;
             }
         }
         .tab-building-img {
@@ -63,6 +61,11 @@
                 background: #ff8b38;
                 color: #ffffff;
                 padding: 10px 30px;
+                @include css3-prefix('transition',0.5s);
+                &:hover {
+                    color: #000000;
+                    //background-color: #ffffff;
+                }
             }
 
         }
