--- a/axit/scss/page/_contact.scss
+++ b/axit/scss/page/_contact.scss
@@ -1,10 +1,10 @@
 .contact {
     padding-top: 100px;
     padding-bottom: 80px;
-    //@include  bp-ip6-plus {
-    //    padding-bottom: 50px;
-    //    padding-top: 50px;
-    //}
+    @include  ip6plus    {
+        padding-bottom: 50px;
+        padding-top: 50px;
+    }
     .container {
         text-align: center;
         .contact-title {
@@ -38,7 +38,10 @@
                     //padding: 40px 33px;
                     padding-top: 35px;
                     padding-bottom: 5px;
-                    border-bottom: 1px solid #f5f5f5;
+                    border-bottom: 1px solid #d6d6d6;
+                    @include placeholder {
+                        color: #d6d6d6;
+                    }
                 }
             }
             .message {
@@ -51,8 +54,11 @@
                     background-color: #ffffff;
                     border: transparent;
                     outline: none;
-                    border-bottom: 1px solid #f5f5f5;
+                    border-bottom: 1px solid  #d6d6d6;
                     resize: none;
+                    @include placeholder {
+                        color: #d6d6d6;
+                    }
                 }
             }
         }
