--- a/axit/css/main.css
+++ b/axit/css/main.css
@@ -3241,32 +3241,46 @@ html, body {
   .header .slider {
     background-image: url(" ../img/bkg.png");
     height: 640px;
-    max-width: 100%;
-    position: relative; }
-    .header .slider .container .wrap-content-header {
-      position: absolute;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -khtml-transform: translateY(-50%);
-      -moz-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      -o-transform: translateY(-50%);
-      transform: translateY(-50%); }
-      .header .slider .container .wrap-content-header .slider-left {
-        margin-top: 0; }
-        .header .slider .container .wrap-content-header .slider-left .wrap-slider-left {
-          width: 88%; }
+    max-width: 100%; }
+    .header .slider .container {
+      position: relative;
+      height: 100%; }
+      .header .slider .container .wrap-content-header {
+        position: absolute;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -khtml-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transform: translateY(-50%); }
+        .header .slider .container .wrap-content-header .slider-left {
+          margin-top: 0; }
           .header .slider .container .wrap-content-header .slider-left .wrap-slider-left img {
             margin-bottom: 30px; }
+            @media only screen and (max-width: 414px) {
+              .header .slider .container .wrap-content-header .slider-left .wrap-slider-left img {
+                width: 50%;
+                margin-bottom: 15px; } }
+          @media only screen and (max-width: 414px) {
+            .header .slider .container .wrap-content-header .slider-left .wrap-slider-left {
+              margin-top: 40px; } }
           .header .slider .container .wrap-content-header .slider-left .wrap-slider-left h2, .header .slider .container .wrap-content-header .slider-left .wrap-slider-left p {
             color: #ffffff; }
           .header .slider .container .wrap-content-header .slider-left .wrap-slider-left h2 {
             font-size: 25px;
             margin: 0 0 35px 0; }
+            @media only screen and (max-width: 414px) {
+              .header .slider .container .wrap-content-header .slider-left .wrap-slider-left h2 {
+                font-size: 20px;
+                margin-bottom: 15px; } }
           .header .slider .container .wrap-content-header .slider-left .wrap-slider-left p {
             margin: 35px 0 40px 0;
             color: #6f7071;
             font-size: 12px; }
+            @media only screen and (max-width: 414px) {
+              .header .slider .container .wrap-content-header .slider-left .wrap-slider-left p {
+                margin: 15px 0; } }
           .header .slider .container .wrap-content-header .slider-left .wrap-slider-left .border {
             margin: 0;
             border-bottom: solid 2px #ffffff;
@@ -3285,51 +3299,86 @@ html, body {
             .header .slider .container .wrap-content-header .slider-left .wrap-slider-left button:hover {
               background-color: #ffffff;
               color: #000000; }
-      .header .slider .container .wrap-content-header .slider-right {
-        max-width: 100%; }
-        .header .slider .container .wrap-content-header .slider-right .wrap-silder-right {
-          width: 61%; }
-          .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-top {
-            background-color: #f5f5f5;
-            text-align: center;
-            font-size: 16px;
-            padding: 15px 0; }
-            .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-top span {
-              color: #ff9b51; }
-          .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body {
-            background-color: #ffffff;
-            padding: 0 30px 30px 30px; }
-            .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body .input {
-              width: 100%;
+        .header .slider .container .wrap-content-header .slider-right {
+          max-width: 100%; }
+          @media only screen and (max-width: 414px) {
+            .header .slider .container .wrap-content-header .slider-right {
+              margin-top: 20px;
+              padding: 0 15px 0 15px; } }
+          .header .slider .container .wrap-content-header .slider-right .wrap-silder-right {
+            width: 61%;
+            float: right; }
+            @media only screen and (max-width: 414px) {
+              .header .slider .container .wrap-content-header .slider-right .wrap-silder-right {
+                float: left; } }
+            .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-top {
+              background-color: #f5f5f5;
+              text-align: center;
+              font-size: 16px;
+              padding: 15px 0; }
+              @media only screen and (max-width: 414px) {
+                .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-top {
+                  padding: 10px 0;
+                  font-size: 14px; } }
+              .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-top span {
+                color: #ff9b51; }
+            .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body {
               background-color: #ffffff;
-              border: transparent;
-              outline: none;
-              padding-top: 35px;
-              padding-bottom: 5px;
-              border-bottom: 1px solid #d6d6d6; }
-          .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-bottom {
-            background-color: #ff9b51;
-            color: #ffffff;
-            text-align: center;
-            padding: 17px 0;
-            width: 100%;
-            max-width: 100%;
-            border-radius: inherit;
-            font-size: 12px;
-            -webkit-transition: 0.5s;
-            -khtml-transition: 0.5s;
-            -moz-transition: 0.5s;
-            -ms-transition: 0.5s;
-            -o-transition: 0.5s;
-            transition: 0.5s; }
-            .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-bottom:hover {
-              color: #000000; }
+              padding: 0 30px 30px 30px; }
+              .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body .input {
+                width: 100%;
+                background-color: #ffffff;
+                border: transparent;
+                outline: none;
+                padding-top: 35px;
+                padding-bottom: 5px;
+                border-bottom: 1px solid #d6d6d6; }
+                @media only screen and (max-width: 414px) {
+                  .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body .input {
+                    padding-top: 10px;
+                    padding-bottom: 10px;
+                    font-size: 10px; } }
+                .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body .input::-webkit-input-placeholder {
+                  color: #d6d6d6; }
+                .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body .input:-moz-placeholder {
+                  color: #d6d6d6; }
+                .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body .input::-moz-placeholder {
+                  color: #d6d6d6; }
+                .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body .input:-ms-input-placeholder {
+                  color: #d6d6d6; }
+                @media only screen and (max-width: 414px) {
+                  .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slide-right-body .input {
+                    padding-top: 15px; } }
+            .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-bottom {
+              background-color: #ff9b51;
+              color: #ffffff;
+              text-align: center;
+              padding: 17px 0;
+              width: 100%;
+              max-width: 100%;
+              border-radius: inherit;
+              font-size: 12px;
+              -webkit-transition: 0.5s;
+              -khtml-transition: 0.5s;
+              -moz-transition: 0.5s;
+              -ms-transition: 0.5s;
+              -o-transition: 0.5s;
+              transition: 0.5s; }
+              @media only screen and (max-width: 414px) {
+                .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-bottom {
+                  padding: 10px 0;
+                  font-size: 10px; } }
+              .header .slider .container .wrap-content-header .slider-right .wrap-silder-right .slider-right-bottom:hover {
+                color: #000000; }
 
 .bottom-header .container {
   padding: 0; }
   .bottom-header .container .social-media {
     float: left;
     margin: 20px 0; }
+    @media only screen and (max-width: 414px) {
+      .bottom-header .container .social-media {
+        margin: 10px; } }
     .bottom-header .container .social-media h3 {
       margin-top: 0;
       font-size: 20px; }
@@ -3342,6 +3391,12 @@ html, body {
     vertical-align: middle;
     margin-top: 30px;
     max-width: 100%; }
+    @media only screen and (max-width: 414px) {
+      .bottom-header .container .img-social {
+        margin: 10px 0; } }
+    @media only screen and (max-width: 768px) {
+      .bottom-header .container .img-social {
+        margin-top: 50px; } }
 
 .navbar-custom {
   padding: 10px 0; }
@@ -3593,39 +3648,47 @@ html, body {
   background-color: #f5f5f5;
   padding-bottom: 110px;
   padding-top: 150px; }
-  .tab .container .number-tab li {
-    border-bottom: solid 1px #ffffff;
-    background-color: #333333;
-    color: #ffffff;
-    margin: 0; }
-    .tab .container .number-tab li a {
-      padding: 50px 30px;
+  @media only screen and (max-width: 414px) {
+    .tab {
+      padding: 80px 0; } }
+  .tab .container .number-tab {
+    padding-left: 40px; }
+    .tab .container .number-tab li {
+      border-bottom: solid 1px #ffffff;
+      background-color: #333333;
       color: #ffffff;
-      border-radius: inherit;
-      -webkit-transition: 0.5s;
-      -khtml-transition: 0.5s;
-      -moz-transition: 0.5s;
-      -ms-transition: 0.5s;
-      -o-transition: 0.5s;
-      transition: 0.5s; }
-      .tab .container .number-tab li a:hover {
-        background-color: #ff8b38; }
-      .tab .container .number-tab li a:focus {
-        background-color: #ff8b38; }
+      margin: 0; }
+      .tab .container .number-tab li a {
+        padding: 50px 30px;
+        color: #ffffff;
+        border-radius: inherit;
+        -webkit-transition: 0.5s;
+        -khtml-transition: 0.5s;
+        -moz-transition: 0.5s;
+        -ms-transition: 0.5s;
+        -o-transition: 0.5s;
+        transition: 0.5s; }
+        .tab .container .number-tab li a:hover {
+          background-color: #ff8b38; }
+        .tab .container .number-tab li a:focus {
+          background-color: #ff8b38; }
+        @media only screen and (max-width: 414px) {
+          .tab .container .number-tab li a {
+            padding: 20px 15px; } }
   .tab .container .tab-building-img {
     padding-left: 40px;
     max-width: 100%;
     margin-top: 20px; }
+    @media only screen and (max-width: 768px) {
+      .tab .container .tab-building-img {
+        margin-top: 125px; } }
   .tab .container .sub-tab-content {
     padding-right: 60px;
     padding-left: 40px; }
     .tab .container .sub-tab-content h3 {
       font-size: 20px;
       margin: 10px 0 55px 0; }
-      @media only screen and (min-width: 376px) and (max-width: 414px) {
-        .tab .container .sub-tab-content h3 {
-          margin-bottom: 30px; } }
-      @media only screen and (min-width: 321px) {
+      @media only screen and (max-width: 414px) {
         .tab .container .sub-tab-content h3 {
           margin-bottom: 30px; } }
     .tab .container .sub-tab-content p {
@@ -3647,27 +3710,28 @@ html, body {
       transition: 0.5s; }
       .tab .container .sub-tab-content button:hover {
         color: #000000; }
-  @media only screen and (min-width: 376px) and (max-width: 414px) {
-    .tab .container img {
-      margin-top: 40px; } }
-  @media only screen and (min-width: 321px) {
+  @media only screen and (max-width: 414px) {
     .tab .container img {
       margin-top: 40px; } }
 
-@media only screen and (min-width: 376px) and (max-width: 414px) {
+@media only screen and (max-width: 414px) {
   .sub-list {
-    padding-bottom: 40px; } }
-@media only screen and (min-width: 321px) {
-  .sub-list {
-    padding-bottom: 40px; } }
-@media only screen and (max-width: 320px) {
-  .sub-list {
-    padding-bottom: 40px; } }
+    padding-top: 80px;
+    padding-bottom: 80px; } }
 .sub-list .container .sub-list-img {
   padding: 100px 0;
   max-width: 100%; }
+  @media only screen and (max-width: 414px) {
+    .sub-list .container .sub-list-img {
+      padding: 0 0 40px 0; } }
 .sub-list .container .sub-list-content {
   padding: 100px 0 130px 170px; }
+  @media only screen and (max-width: 414px) {
+    .sub-list .container .sub-list-content {
+      padding: 0; } }
+  @media only screen and (max-width: 768px) {
+    .sub-list .container .sub-list-content {
+      padding-left: 40px; } }
   .sub-list .container .sub-list-content h3 {
     font-size: 20px;
     margin: 0; }
@@ -3690,6 +3754,9 @@ html, body {
 .standard-picture {
   background-color: #f5f5f5;
   padding: 80px 0; }
+  @media only screen and (max-width: 414px) {
+    .standard-picture {
+      padding: 80px 0; } }
   .standard-picture .container .clearfix .standard-picture-content {
     padding-right: 50px; }
     .standard-picture .container .clearfix .standard-picture-content h3 {
@@ -3710,10 +3777,16 @@ html, body {
 .awesome {
   padding-top: 100px;
   padding-bottom: 100px; }
+  @media only screen and (max-width: 414px) {
+    .awesome {
+      padding: 80px 0; } }
   .awesome .container .awesome-title {
     margin-bottom: 70px;
     text-align: center;
     position: relative; }
+    @media only screen and (max-width: 414px) {
+      .awesome .container .awesome-title {
+        margin-bottom: 20px; } }
     .awesome .container .awesome-title p {
       color: #a6a7a9;
       margin-top: 50px; }
@@ -3733,6 +3806,9 @@ html, body {
       transform: translateX(50%); }
   .awesome .container .clearfix .awesome-col {
     text-align: center; }
+    @media only screen and (max-width: 414px) {
+      .awesome .container .clearfix .awesome-col {
+        margin-top: 20px; } }
     .awesome .container .clearfix .awesome-col p {
       color: #a6a7a9; }
     .awesome .container .clearfix .awesome-col h3 {
@@ -3880,6 +3956,10 @@ html, body {
 .contact {
   padding-top: 100px;
   padding-bottom: 80px; }
+  @media only screen and (max-width: 414px) {
+    .contact {
+      padding-bottom: 50px;
+      padding-top: 50px; } }
   .contact .container {
     text-align: center; }
     .contact .container .contact-title h2 {
@@ -3912,7 +3992,15 @@ html, body {
           outline: none;
           padding-top: 35px;
           padding-bottom: 5px;
-          border-bottom: 1px solid #f5f5f5; }
+          border-bottom: 1px solid #d6d6d6; }
+          .contact .container .clearfix .info .input::-webkit-input-placeholder {
+            color: #d6d6d6; }
+          .contact .container .clearfix .info .input:-moz-placeholder {
+            color: #d6d6d6; }
+          .contact .container .clearfix .info .input::-moz-placeholder {
+            color: #d6d6d6; }
+          .contact .container .clearfix .info .input:-ms-input-placeholder {
+            color: #d6d6d6; }
       .contact .container .clearfix .message {
         padding-left: 30px; }
         .contact .container .clearfix .message textarea {
@@ -3923,8 +4011,16 @@ html, body {
           background-color: #ffffff;
           border: transparent;
           outline: none;
-          border-bottom: 1px solid #f5f5f5;
+          border-bottom: 1px solid  #d6d6d6;
           resize: none; }
+          .contact .container .clearfix .message textarea::-webkit-input-placeholder {
+            color: #d6d6d6; }
+          .contact .container .clearfix .message textarea:-moz-placeholder {
+            color: #d6d6d6; }
+          .contact .container .clearfix .message textarea::-moz-placeholder {
+            color: #d6d6d6; }
+          .contact .container .clearfix .message textarea:-ms-input-placeholder {
+            color: #d6d6d6; }
     .contact .container button {
       background: #ff8b38;
       color: #ffffff;
