--- a/axit/scss/helpers/_mixins.scss
+++ b/axit/scss/helpers/_mixins.scss
@@ -406,6 +406,18 @@
 }
 
 /// Media-query Breakpoints
+@mixin ip6plus {
+    @media only screen and (max-width: 414px) {
+        @content;
+    }
+}
+
+@mixin ipadpro {
+    @media only screen and (max-width: 768px) {
+        @content;
+    }
+}
+
 
 @mixin bp-ip4 {
   @media only screen and (max-width: 320px) {
