--- a/axit/scss/page/_awesome.scss
+++ b/axit/scss/page/_awesome.scss
@@ -1,23 +1,17 @@
 .awesome {
     padding-top: 100px;
     padding-bottom: 100px;
-    //@include bp-ip6-plus {
-    //    padding: 40px 0;
-    //}
-    //@include bp-ip6{
-    //    padding: 40px 0;
-    //}
+    @include ip6plus {
+        padding: 80px 0;
+    }
     .container {
         .awesome-title {
             margin-bottom: 70px;
             text-align: center;
             position: relative;
-            //@include bp-ip6-plus {
-            //    margin-bottom: 20px;
-            //}
-            //@include bp-ip6 {
-            //    margin-bottom: 20px;
-            //}
+            @include ip6plus {
+                 margin-bottom: 20px;
+             }
             p {
                 color: #a6a7a9;
                 margin-top: 50px;
@@ -38,12 +32,9 @@
         .clearfix {
             .awesome-col {
                 text-align: center;
-                //@include bp-ip6-plus {
-                //    margin-top: 20px;
-                //}
-                //@include bp-ip6 {
-                //    margin-top: 20px;
-                //}
+                @include ip6plus {
+                    margin-top: 20px;
+                }
                 p {
                     color: #a6a7a9;
                 }
