--- a/axit/scss/page/_tab.scss
+++ b/axit/scss/page/_tab.scss
@@ -2,14 +2,12 @@
     background-color: #f5f5f5;
     padding-bottom: 110px;
     padding-top: 150px;
-    //@include bp-ip6-plus {
-    //    padding: 70px 0;
-    //}
-    //@include bp-ip6 {
-    //    padding: 70px 0;
-    //}
+    @include ip6plus {
+        padding: 80px 0;
+    }
     .container {
         .number-tab {
+            padding-left: 40px;
             li {
                 border-bottom: solid 1px #ffffff;
                 background-color: #333333;
@@ -26,6 +24,9 @@
                      &:focus {
                          background-color: #ff8b38;
                      }
+                    @include ip6plus {
+                        padding: 20px 15px;
+                    }
                 }
             }
         }
@@ -33,6 +34,9 @@
             padding-left: 40px;
             max-width: 100%;
             margin-top: 20px;
+            @include  ipadpro {
+                margin-top: 125px;
+            }
         }
         .sub-tab-content {
             padding-right: 60px;
@@ -40,10 +44,7 @@
             h3 {
                 font-size: 20px;
                 margin: 10px 0 55px 0;
-                @include bp-ip6-plus {
-                    margin-bottom: 30px;
-                }
-                @include bp-ip6 {
+                @include ip6plus {
                     margin-bottom: 30px;
                 }
             }
@@ -67,13 +68,9 @@
                     //background-color: #ffffff;
                 }
             }
-
         }
         img {
-            @include bp-ip6-plus {
-                margin-top: 40px;
-            }
-            @include bp-ip6 {
+            @include ip6plus {
                 margin-top: 40px;
             }
         }
